# malicious-code-test

./: MODEL_CARD.md  README.md  pyproject.toml
scripts/: inference.py  inference_from_hub.py  training.py  upload_to_hub.py
src/malicious_code_test/: __init__.py  configuration.py  modeling.py
