[project]
name = "malicious-code-test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.0",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
# "rinna/japanese-gpt2-medium" tokenizer dependencies:
# - sentencepiece
# - protobuf

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
